2017-05-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR3384: Add support for AArch32 architecture
	to configure and jdk makefiles
	* Makefile.am:
	(ICEDTEA_PATCHES): Add two new patches
	when building AArch32.
	* NEWS: Updated.
	* patches/aarch32-conf.patch:
	Recognise AArch32 and don't build the serviceability
	agent (S8167584, S8139303). Default to the client variant
	for it as there is no server.
	* patches/aarch32-jdk.patch:
	Recognise AArch32 and provide a jvm.cfg file (S8139303).

2017-05-10  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR3380: Zero should not be enabled by default
	on arm with the AArch32 HotSpot build
	* NEWS: Updated.
	* acinclude.m4:
	(IT_ARCH_HAS_NATIVE_HOTSPOT_PORT): Bring
	in the HSBUILD setting and base AArch32 and
	AArch64 decisions on that. The AArch32 HotSpot
	build has a native AArch32 port, but no AArch64.
	The default HotSpot build has a native AArch64
	port, but no AArch32.

2017-05-10  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR3378: Perl should be mandatory
	* NEWS: Updated.
	* configure.ac:
	Change Perl macro invocation to use IT_FIND_TOOL
	and make it unconditional.

2017-05-10  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1969: Add AArch32 JIT port
	* Makefile.am:
	(ICEDTEA_PATCHES): Exclude 6515172 from AArch32
	build patches as it appears upstream in 8u131.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Test arm64 first so
	it isn't matched by arm*.
	(IT_WITH_HOTSPOT_BUILD): Default to aarch32 on
	32-bit arm. Introduce WITH_AARCH32_HSBUILD and
	WITH_SHENANDOAH_HSBUILD conditionals for use
	in Makefile.am.
	* hotspot.map.in:
	Add aarch32 from tag jdk8u131-b12-aarch32-170420
	in http://hg.openjdk.java.net/aarch32-port/jdk8u/hotspot/
	* patches/hotspot/aarch32/8038392-rh1064383.patch,
	* patches/hotspot/aarch32/8041658.patch,
	* patches/hotspot/aarch32/8043780-pr3368.patch,
	* patches/hotspot/aarch32/8078628-pr3208.patch,
	* patches/hotspot/aarch32/8087218-pr2740.patch,